Fixed issue with WebSockets and STS credentials
Version number bumped due to method signature change